# amazon_ads_api

./: Cargo.toml
src/: ads_v1.rs  auth.rs  client.rs  lib.rs  middleware.rs  products.rs  region.rs  reporting.rs  reporting_type.rs  serde_util.rs  util.rs  v3.rs
src/ads_v1/: sp.rs  types.rs
src/ads_v1/sp/: ads.rs  targets.rs  types.rs
src/ads_v1/sp/types/: ads.rs  enums.rs  targets.rs
src/ads_v1/sp_global/: ads.rs  targets.rs  types.rs
src/ads_v1/sp_global/types/: ads.rs  enums.rs  targets.rs
src/sp/: product_ads.rs
src/v3/: keyword_targets.rs  product_ads.rs  product_targeting.rs
src/v3/types/: enums.rs
tests/: auth_test.rs  common.rs  products.rs  region_test.rs  reporting.rs  sp_product_ads.rs  test.rs  v1_ads.rs  v1_global_ads.rs  v1_global_targets.rs  v1_targets.rs  v3_keyword_targets.rs  v3_product_targeting.rs
