[package]
name = "amazon_ads_api"
version = "0.1.2"
edition = "2021"

[dependencies]
bon = "3.8.1"
once_cell = "1.21.3"
serde = "1.0.228"
serde_json = "1.0.148"
serde_with = { version = "3.14.0" }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.8"
anyhow = { version = "1.0.98" }
ttl_cache = { version = "0.5.1" }
async-trait = "0.1.89"
http = "^1"
cached = { version = "0.56", features = ["async"] }

[dev-dependencies]
dotenvy = "0.15"
