[package]
name = "amazon_ads_api"
version = "0.1.5"
edition = "2021"

[dependencies]
bon = "^3.8"
once_cell = "^1.21"
serde = "^1"
serde_json = "^1"
serde_with = { version = "^3.14" }
tokio = { version = "^1.48", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.8"
anyhow = { version = "^1" }
async-trait = "0.1.89"
http = "^1"
cached = { version = "0.56", features = ["async"] }
chrono = {version="0.4", features = ["serde"]}

[dev-dependencies]
dotenvy = "0.15"
